2007-03-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Add an application

2007-03-10  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add more milestones (could someone upload/update the website please?
	  the auto-upload/rebuild never seems to work for me).

2007-03-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.12.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.12.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:

	Release GStreamer and Base 0.10.12.

2007-03-03  David I. Lehn  <dlehn@users.sourceforge.net>

	* bin/planet-update:
	  Config file and build dir changes (temporarily to my dir).
	* planet/config.ini:
	  Remove incomplete ChangeLogish cruft.
	  Updates for newer planet code.
	  Add atom feed.
	* planet/index.html.tmpl:
	  Updates for newer planet code.
	  Add atom feed links.
	  Too lazy to find new icon so use text feed links vs images.
	  Misc fixes.

2007-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bindings/bindings.xml:
	  put content on the python page

2007-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bindings/bindings.xsl:
	* src/htdocs/modules/modules.xsl:
	  Fix dotext undeclared variable errors

2007-01-31  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.7.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	Releasing gst-python 0.10.7 "You want to feel sorry for yourself,
	Don't you ?"

2007-01-26  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.7.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	* src/htdocs/releases/gnonlin/template.xml:
	Releasing GNonLin 0.10.7 "Anything better ?"
