@@ -103,6 +103,11 @@ use with upnp media servers</p>
 <p><a href="http://live.gnome.org/Istanbul">Istanbul</a> is a screen recorder
 </p>
 
+<h2>iStream</h2>
+<p><a href="http://gnomefiles.org/app.php/iStream">iStream</a> is a GNOME
+panel applet for playing internet radio streams.
+</p>
+
 <h2>Jamboree</h2>
 <p><a href="http://www.imendio.com/projects/jamboree/">Jamboree</a> is a GNOME based music player developed by Imendio.</p>
 
